[package]
name = "best_todo"
version = "0.1.0"
authors = ["stong1994 <st5983@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "1.2"
serde = "1.0.130"
dotenv = "0.15.0"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"] 